Alteracao metodo toList para java 11